--- a/ocis-idp/templates/configmap.yaml
+++ b/ocis-idp/templates/configmap.yaml
@@ -6,14 +6,14 @@ metadata:
   labels:
     {{- include "ocis.labels" . | nindent 4 }}
 data:
-  entrypoint.sh: |
-      #!/bin/sh
-      set -x
+  entrypoint.sh: |-
+    #!/bin/sh
+    set -x
 
-      {{- range .Values.entrypoint.services }}
-      {{ . }} &
-      {{- end }}
-      sleep infinite
+    {{- range .Values.entrypoint.services }}
+    {{ . }} &
+    {{- end }}
+    sleep infinite
 
 {{- range $filename, $fileContents := .Values.configFiles }}
   {{ $filename }}: |-
